# fedem

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  docs-requirements.txt  fedem.client.html  fedem.configurations.html  fedem.html  fedem.models.html  fedem.server.html  fedem.trainer.html  fedem.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  server_cron_workflow.py  setup.py
.devcontainer/: DockerFile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
_modules/: index.html
_sources/: fedem.client.rst.txt  fedem.rst.txt  fedem.server.rst.txt  modules.rst.txt
docs/: conf.py  fedem.configurations.rst  fedem.models.rst  fedem.trainer.rst  fedem.utils.rst  index.rst  modules.rst
fedem/: __init__.py  configuration_mamba.py  modeling_mamba.py  server.py  utils.py
notebooks/: ByT5-test-on-telugu.ipynb  Mamba using only HF.ipynb  Mamba🐍.ipynb  client.ipynb  config.json  configuration_mamba.py  data_integration.ipynb  demo-peft.ipynb  demo.ipynb  fedem_client.ipynb  fedem_client_0.ipynb  fedem_seshu_client.ipynb  fedem_seshu_server.ipynb  git-python-api-test-on-hf-hub.ipynb  mamba-lora-add-adapters-merge-peft-hub-mlsq-test.ipynb  mamba-lora-merge-peft-hub-mlsq-test.ipynb  mamba-lora-merge-peft-hub-test.ipynb  mamba-tf-lora-merge-peft-test.ipynb  mamba-tf-lora-merge-test.ipynb  mamba_lora.ipynb  mamba_pretrain.ipynb  model.py  model_parameters.json  model_parameters_lora.json  (+5 more)
(+27 files in other folders)
