[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 90
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
recursive = true

# [tool.mypy]
# strict = true
